<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.myapplication2.MainActivity"
    tools:showIn="@layout/activity_main">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mass"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextMass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="calculateBMI"
                android:layout_gravity="center"
                android:text="@string/calculate_BMI" />

            <Switch
                android:id="@+id/switchUnits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_unit"
                android:onClick="changeUnit"/>

            <TextView
                android:id="@+id/units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/normal_units" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
